registration page added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <tite></tite>
-        <style>
 
-        </style>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <title>Saudi Trip</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Css/common_style.css">
+    <style>
+        .travel_poster {
+            position: relative;
+        }
+
+        .poster_text {
+            position: absolute;
+            left: 34%;
+            top: 85%;
+            transform: translate(-30%, -50%);
+            font-size: 10px;
+            font-weight: bold;
+            text-align: center;
+            color: rgb(32, 32, 32);
+
+        }
+      
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="side_bar">
+            <a href="./Pages/PlanYourTrip.html" class="side_bar_items">Plan Your Trip</a>
+            <a href="./Pages/TravelEssential.html" class="side_bar_items">Travel Essential</a>
+            <a href="./Pages/SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
+            <a href="./Pages/Login.html" class="side_bar_items"><img src="./Images/interface.png" alt="user_logo"
+                    class="user_logo" />Login</a><br />
+            <a href="./Pages/Register.html"><button class="btn">Get Started</button></a><br />
+        </div>
+        <div class="context">
+            <div class="travel_poster">
+                <img src="./Images/bg_image_sadua.jpeg" width="1000px" height="360px" style="margin-left: 39px;"
+                    aria-valuetext="Discover Your World, Plan Your Trip" />
+                <div class="poster_text">
+                    <span style="font-size: 50px;">Discover A Real Value Of Travel</span><br />
+                    <span style="font-size: 30px;">Plan Your Trip To Saudi</span>
+                </div>
+            </div>
+            <br/>
+            <p class="text_style">Saudi Arabia, aka the Kingdom of Saudi Arabia, is situated in Western Asia. It is the second-largest Arab
+                state after Algeria. The country is the epicentre of Islamic values and cultures. The country is young,
+                but it has a vibrant history.
+
+                Saudi Arabia is gaining traction because of its oil reserves, religious sites Mecca and Medina, ideology
+                of Wahhabism and more. Kuwait, Iraq, Oman, UAE and Jordan bordered this Islamic country.
+
+                Since the country is the birthplace of Islam and religious sites are here, various tourists from all
+                across the globe come here. The Saudi people are famous for their generous and warm hospitality culture.
+            </p>
+            <br />
+            <div  class="text_style">
+                <h2><span>Best Tourist Places in Saudi Arabia</span></h2><br />
+                From sandy shores to the snow-capped mountains, there are many famous places in Saudi Arabia. Some of
+                the best Saudi tourist places are listed below:<br /><br />
+
+                <span>Riyadh</span>- The very first famous place in Saudi Arabia is Riyadh, which is also the capital of
+                the nation. The city sits between the barren desert and rocky mountains. The modern city is a perfect
+                blend of industries and natural attractions.Various crucial petrochemical industries, oil production and
+                refining centres are here. Not just this, it is packed with beautiful gardens, green spaces and
+                more.<br /><br />
+
+                <span>Dammam</span>- Damman is the third most populous city in the country, with a population of 530,543
+                people. The city is situated 38 metres above sea level. It is a haven for priceless relics and
+                museums.<br />
+                **Abu Al-Feda House is the most visited place in Dammam since it is the oldest house in the
+                city.<br /><br />
+
+                <span>Tabuk</span>- Another popular place in Saudi Arabia is Tabuk, which is spread over 3000 square
+                kilometres. The central city has a population of over 4 million people. The city is considered as the
+                hub of shopping, culture and entertainment.<br />
+                **The famous Al-Jumaa Mosque attracts thousands of tourists every year. Other than this, it houses
+                various towers and forts built during Roman times.<br /><br />
+
+                <span>Jeddah</span>- Another famous Saudi tourist place is Jeddah which is also known as the coastal
+                city. The city is located on the coast of the Red Sea. It is designated as a cultural and commercial
+                point of the country.
+                The city holds the major seaport of the Persian Gulf region. It is a place to witness authentic Arab
+                culture.<br /><br />
+
+                <span>Abha</span>- Last on the list is Abha which is the famous city of Saudi Arabia known for its major
+                industries. The city was established to serve as the residential centre for Bedouins who were displaced
+                from their ancestral homes during the building of King's Highway.The city is home to various castles and
+                archaeological sites.<br /><br />
+
+                <h2><span>Landmarks or Attractions in Saudi Arabia</span></h2>
+                Saudi Arabia is famous for its diverse offering but historical landmarks and sites are the significant
+                thing that draws tourists. Some of the famous landmarks include:<br /><br />
+
+                Masjid-al-Haram- The most visited place in Saudi Arabia is Masjid-al-Haram, which is a religious site
+                situated in Mecca. The holy place is one of the biggest mosques, which can host millions of worshippers.
+                <br/><br/>
+            </div>
+
+        </div>
+    </div>
+</body>
+
 </html>
