--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Login Page</title>
+    <title>Registration Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../Css/common_style.css">
     <style>
@@ -38,7 +38,8 @@
 <body>
     <div class="container">
         <div class="side_bar">
-            <a href="./PlanYourTrip.html" class="side_bar_items">Plan Your Trip</a>
+            <a href="./../index.html"class="side_bar_items"> <img src="./../Images/house.png" alt="user_logo"
+                class="user_logo" >Plan Your Trip</a>
             <a href="./TravelEssential.html" class="side_bar_items">Travel Essential</a>
             <a href="./SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
             <a href="./Login.html" class="side_bar_items"><img src="./../Images/interface.png" alt="user_logo"
