--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <body>
     <div class="container">
         <div class="side_bar">
-            <a href="./Pages/PlanYourTrip.html" class="side_bar_items">Plan Your Trip</a>
+            <a href="./index.html" class="side_bar_items"><img src="./Images/house.png" alt="user_logo"
+                class="user_logo" />Plan Your Trip</a>
             <a href="./Pages/TravelEssential.html" class="side_bar_items">Travel Essential</a>
             <a href="./Pages/SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
             <a href="./Pages/Login.html" class="side_bar_items"><img src="./Images/interface.png" alt="user_logo"
