Active Page css effect added

--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -44,7 +44,7 @@
             <a href="./SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
             <a href="./Login.html" class="side_bar_items"><img src="./../Images/interface.png" alt="user_logo"
                     class="user_logo" />Login</a><br />
-            <a href="./Register.html"><button class="btn">Get Started</button></a><br />
+            <a href="./Register.html" class="active_page"><button class="btn">Get Started</button></a><br />
         </div>
         <div class="context">
             <div class="form_container">
