--- a/Pages/SaudiCalendar.html
+++ b/Pages/SaudiCalendar.html
@@ -20,7 +20,7 @@
             <a href="./../index.html" class="side_bar_items"> <img src="./../Images/house.png" alt="user_logo"
                     class="user_logo"> Plan Your Trip</a>
             <a href="./TravelEssential.html" class="side_bar_items">Travel Essential</a>
-            <a href="./SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
+            <a href="./SaudiCalendar.html" class="side_bar_items active_page">Saudi Calendar</a>
             <a href="./Login.html" class="side_bar_items"><img src="./../Images/interface.png" alt="user_logo"
                     class="user_logo" />Login</a><br />
             <a href="./Register.html"><button class="btn">Get Started</button></a><br />
