--- a/Pages/TravelEssential.html
+++ b/Pages/TravelEssential.html
@@ -9,7 +9,7 @@
     <style>
 .side_bar_items {
     font-size: 15px;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-left: 10px;
     margin-right: 10px;
     padding: 5px;
@@ -38,7 +38,7 @@
         <div class="side_bar">
             <a href="./../index.html" class="side_bar_items"> <img src="./../Images/house.png" alt="user_logo"
                     class="user_logo"> Plan Your Trip</a>
-            <a href="./TravelEssential.html" class="side_bar_items">Travel Essential</a>
+            <a href="./TravelEssential.html" class="side_bar_items active_page">Travel Essential</a>
             <a href="./SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
             <a href="./Login.html" class="side_bar_items"><img src="./../Images/interface.png" alt="user_logo"
                     class="user_logo" />Login</a><br />
