--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="container">
         <div class="side_bar">
-            <a href="./index.html" class="side_bar_items"><img src="./Images/house.png" alt="user_logo"
+            <a href="./index.html" class="side_bar_items active_page"><img src="./Images/house.png" alt="user_logo"
                 class="user_logo" />Plan Your Trip</a>
             <a href="./Pages/TravelEssential.html" class="side_bar_items">Travel Essential</a>
             <a href="./Pages/SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
@@ -58,9 +58,9 @@
             </p>
             <br />
             <div  class="text_style">
-                <h2><span>Best Tourist Places in Saudi Arabia</span></h2><br />
+                <h2><span>Best Tourist Places in Saudi Arabia</span></h2>
                 From sandy shores to the snow-capped mountains, there are many famous places in Saudi Arabia. Some of
-                the best Saudi tourist places are listed below:<br /><br />
+                the best Saudi tourist places are listed below:<br />
 
                 <span>Riyadh</span>- The very first famous place in Saudi Arabia is Riyadh, which is also the capital of
                 the nation. The city sits between the barren desert and rocky mountains. The modern city is a perfect
