--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -42,7 +42,7 @@
                 class="user_logo"> Plan Your Trip</a>
             <a href="./TravelEssential.html" class="side_bar_items">Travel Essential</a>
             <a href="./SaudiCalendar.html" class="side_bar_items">Saudi Calendar</a>
-            <a href="./Login.html" class="side_bar_items"><img src="./../Images/interface.png" alt="user_logo"
+            <a href="./Login.html" class="side_bar_items active_page"><img src="./../Images/interface.png" alt="user_logo"
                     class="user_logo" />Login</a><br />
             <a href="./Register.html"><button class="btn">Get Started</button></a><br />
         </div>
