For Tablet size screens -media queiries added

--- a/Pages/SaudiCalendar.html
+++ b/Pages/SaudiCalendar.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Travel Essential Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +8,16 @@
         .img_format{
             margin-left: 150px;
         }
+         /* Tablet Devices */
+
+         @media screen and (min-width: 769px) and (max-width: 992px) {
+            .img_format{
+            margin-left: 60px;
+        }
+         }
 
     </style>
-
 </head>
-
 <body>
     <div class="container">
         <div class="side_bar">
@@ -29,8 +33,6 @@
             <div class="img_format">
           <img src="./../Images/caendar.jpg" alt="Saudi Arabia caendar img"/> 
         </div>   
-        </div>
-
+    </div>
 </body>
-
 </html>
